minor edits to AirBnB Kaggle iR workbook

--- a/Cases/AirBnB Kaggle/R/AirBnBKaggle-SQL-RDataFrame-RDataTable-SparkRSQLDataFrame.ipynb
+++ b/Cases/AirBnB Kaggle/R/AirBnBKaggle-SQL-RDataFrame-RDataTable-SparkRSQLDataFrame.ipynb
@@ -39,6 +39,10 @@
     "\n",
     "- __`R`__ v3.2.2 or later;\n",
     "\n",
+    "- __`lubridate`__ `R` package for manipulating date-times data;\n",
+    "\n",
+    "- __`stringr`__ `R` package for manipulating character string data;\n",
+    "\n",
     "- __`data.table`__ `R` package;\n",
     "\n",
     "- __`RPostgreSQL`__ `R` package;\n",
@@ -28564,7 +28568,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.2.2"
+   "version": "3.2.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
