--- a/Cases/AirBnB Kaggle/R/AirBnBKaggle-SQL-RDataFrame-RDataTable-SparkRSQLDataFrame.ipynb
+++ b/Cases/AirBnB Kaggle/R/AirBnBKaggle-SQL-RDataFrame-RDataTable-SparkRSQLDataFrame.ipynb
@@ -28471,33 +28471,33 @@
     "tryCatch({\n",
     "    \n",
     "    showDF(\n",
-    "        sql(sqlContext=sqlc,\n",
-    "            sqlQuery=\n",
-    "                \"SELECT\n",
-    "                    start_of_mth,\n",
-    "                    dest_rank_in_mth,\n",
-    "                    LAG(dest_rank_in_mth, 1, NULL) OVER inc_mth_by_dest - dest_rank_in_mth AS dest_rank_rise_vs_last_mth,\n",
-    "                    dest,\n",
-    "                    nb_1st_bkgs_in_mth\n",
-    "                FROM\n",
-    "                    (SELECT\n",
+    "        orderBy(\n",
+    "            sql(sqlContext=sqlc,\n",
+    "                sqlQuery=\n",
+    "                    \"SELECT\n",
     "                        start_of_mth,\n",
-    "                        RANK() OVER desc_nb_1st_bkgs_by_mth AS dest_rank_in_mth,\n",
+    "                        dest_rank_in_mth,\n",
+    "                        LAG(dest_rank_in_mth, 1, NULL) OVER inc_mth_by_dest - dest_rank_in_mth AS dest_rank_rise_vs_last_mth,\n",
     "                        dest,\n",
     "                        nb_1st_bkgs_in_mth\n",
     "                    FROM\n",
-    "                        nb_1st_bkgs_incl_zeros_by_mth_by_dest\n",
+    "                        (SELECT\n",
+    "                            start_of_mth,\n",
+    "                            RANK() OVER desc_nb_1st_bkgs_by_mth AS dest_rank_in_mth,\n",
+    "                            dest,\n",
+    "                            nb_1st_bkgs_in_mth\n",
+    "                        FROM\n",
+    "                            nb_1st_bkgs_incl_zeros_by_mth_by_dest\n",
+    "                        WINDOW\n",
+    "                            desc_nb_1st_bkgs_by_mth AS\n",
+    "                              (PARTITION BY start_of_mth\n",
+    "                               ORDER BY nb_1st_bkgs_in_mth DESC)) sub_query\n",
     "                    WINDOW\n",
-    "                        desc_nb_1st_bkgs_by_mth AS\n",
-    "                          (PARTITION BY start_of_mth\n",
-    "                           ORDER BY nb_1st_bkgs_in_mth DESC)) sub_query\n",
-    "                WINDOW\n",
-    "                    inc_mth_by_dest AS\n",
-    "                      (PARTITION BY dest\n",
-    "                       ORDER BY start_of_mth)\"),\n",
-    "        #.orderBy(\n",
-    "                #    'start_of_mth',\n",
-    "                #    'dest_rank_in_mth')\\,\n",
+    "                        inc_mth_by_dest AS\n",
+    "                          (PARTITION BY dest\n",
+    "                           ORDER BY start_of_mth)\"),\n",
+    "            col=c('start_of_mth',\n",
+    "                  'dest_rank_in_mth')),\n",
     "        numRows=300)\n",
     "    \n",
     "}, error = function(err) {\n",
