--- a/Cases/AirBnB Kaggle/R/AirBnBKaggle-SQL-RDataFrame-RDataTable-SparkRSQLDataFrame.ipynb
+++ b/Cases/AirBnB Kaggle/R/AirBnBKaggle-SQL-RDataFrame-RDataTable-SparkRSQLDataFrame.ipynb
@@ -28496,8 +28496,7 @@
     "                        inc_mth_by_dest AS\n",
     "                          (PARTITION BY dest\n",
     "                           ORDER BY start_of_mth)\"),\n",
-    "            col=c('start_of_mth',\n",
-    "                  'dest_rank_in_mth')),\n",
+    "            col='start_of_mth'),\n",
     "        numRows=300)\n",
     "    \n",
     "}, error = function(err) {\n",
